--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "node-cron": "^3.0.3"
+    "fs": "^0.0.1-security",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^24.2.0"
   }
 }
